--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -17,7 +17,7 @@ body {
 }
 
 body {
-    font-family: 'Coda', cursive;
+    /* font-family: 'Coda', cursive; */
 }
 
 .container {
@@ -27,9 +27,16 @@ body {
     flex-direction: column;
 }
 
+.in-background {
+    color: red;
+    opacity: 0.3;
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+}
+
 h1 {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 300;
+    /* font-family: 'Open Sans', sans-serif; */
+    /* font-weight: 300; */
 }
 
 /*
