--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -16,10 +16,6 @@ body {
     padding: 0;
 }
 
-body {
-    /* font-family: 'Coda', cursive; */
-}
-
 .container {
     display: flex;
     justify-content: center;
@@ -36,7 +32,7 @@ body {
 
 h1 {
     /* font-family: 'Open Sans', sans-serif; */
-    /* font-weight: 300; */
+    font-weight: 300;
 }
 
 /*
@@ -104,7 +100,7 @@ h1 {
     margin: 0 5px 0 0;
 }
 
-.score-panel .stars li {
+#container > section.score-panel > ul > li {
     list-style: none;
     display: inline-block;
 }
@@ -121,3 +117,9 @@ h1 {
     margin-left: 15px;
     width: 150px;
 }
+
+/* 
+    TODO: 
+    Card icons should display in center of card but it isn't"
+*/
+
